--- a/src/components/timeline-item/TimelineItem.scss
+++ b/src/components/timeline-item/TimelineItem.scss
@@ -2,7 +2,7 @@
 div.timeline-item {
     background-color: transparent;
 
-    .twit-card-img {
+    .tweets-card-img {
         width: auto;
         max-width: 40%;
     }
