--- a/src/components/timeline-item/TimelineItem.scss
+++ b/src/components/timeline-item/TimelineItem.scss
@@ -1,9 +1,20 @@
 
-div.timeline-item {
-    background-color: transparent;
+.app {
 
-    .tweets-card-img {
-        width: auto;
-        max-width: 40%;
+    .timeline-item {
+        background-color: transparent;
+
+        .tweets-card-img {
+            width: auto;
+            max-width: 40%;
+        }
+
+        &__title, &__text, &__link { color: #fff; }
+
+        &__time {
+            font-size: 12px;
+            color: rgba(255, 255, 255, 0.5);
+        }
     }
 }
+
